--- a/index.html
+++ b/index.html
@@ -40,37 +40,37 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/01.jpg" alt="" /></a>
 								<h3>CAFE NESCAFE</h3>
-								<button id="boton">Agregar al carrito</button>
+								<button>Agregar al carrito</button>
 								<p>Hecho 100% por agricultores peruanos.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/02.jpg" alt="" /></a>
 								<h3>SAL DE COCINA </h3>
-                                <button id="boton">Agregar al carrito</button>
+                                <button>Agregar al carrito</button>
 								<p>Hecho 100% por agricultores peruanos.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
 								<h3>HARINA PARA PASTELES</h3>
-                                <button id="boton">Agregar al carrito</button>
+                                <button>Agregar al carrito</button>
 								<p>Hecho 100% por agricultores peruanos..</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
 								<h3>SABORISANTE DE FLAN</h3>
-                                <button id="boton">Agregar al carrito</button>
+                                <button>Agregar al carrito</button>
 								<p>Hecho 100% por agricultores peruanos..</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
 								<h3>AVENA "QUAKER"</h3>
-                                <button id="boton">Agregar al carrito</button>
+                                <button>Agregar al carrito</button>
 								<p>Hecho 100% por agricultores peruanos.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>FIDEOS "DON VICTORIO"</h3>
-                                <button id="boton">Agregar al carrito</button>
+                                <button>Agregar al carrito</button>
 								<p>Hecho 100% por agricultores peruanos..</p>
 							</article>
 						</div>
